--- a/css/blocks/offer/offer.scss
+++ b/css/blocks/offer/offer.scss
@@ -3,9 +3,15 @@
 .offer {
   background-color: #fff;
   max-width: 640px;
+  width: 100%;
   box-sizing: border-box;
-  padding: 20px 10px;
+  padding: 15px 10px;
   border-radius: 15px;
+  margin-bottom: 15px;
+
+  &:last-of-type {
+    margin-bottom: 0;
+  }
 
   &:hover {
     box-shadow: 0 2px 8px rgb(18 17 36 / 4%), 0 4px 32px rgb(18 17 36 / 8%);
