--- a/css/blocks/offer/offer.scss
+++ b/css/blocks/offer/offer.scss
@@ -56,6 +56,7 @@
       border-radius: 10px;
       font-weight: 700;
       user-select: none;
+      border: none;
 
       &:hover {
         transition: transform .1s;
